correct the location of the pic

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@ html,body,div,span,object,iframe,h1,h2,h3,h4,h5,h6,p,blockquote,pre,a,abbr,acron
   <div id="wrapper">
       <h1 id="liangchengchinese:">Liang Cheng (Chinese: 程 亮)</h1>
 
-<p><img src="/Users/cgnail/Pictures/照片/i/croped.jpg" align="center" alt="Drawing" width="300px" /></p>
+<p><img src="me-2010.jpg" align="center" alt="Drawing" width="300px" /></p>
 
 <p><a href="#id-bio">Brief Bio</a> | <a href="#id-edu">Education</a> | <a href="#id-res">Research Interests</a> | <a href="#id-pub">Publications</a> | <a href="#id-proj">Funded Projects</a> | <a href="#id-vul">Vulnerability Reports</a> | <a href="#id-cont">Contact</a></p>
 
