new website based on Hakyll

--- a/410.html
+++ b/410.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="utf-8" />
         <meta name="author" content="Liang Cheng" />
-        <title>Liang Cheng</title>
+        <title>Page Gone!</title>
         <link rel="stylesheet" type="text/css" href="./css/default.css" />
         <link rel="shortcut icon" href="./favicon.ico" />
         <link rel="apple-touch-icon" href="./images/touch.png" />
@@ -45,22 +45,27 @@
             </header>
             <hr>
             <div id="page">
-                <div class="home_image_container">
-<div class="home_image">
-<img src="images/liang.jpg" alt="A picture of me" width="220" height="226">
-</div>
-</div>
-<hr />
-<p>I am a visiting scholar at the <a href="http://precise.seas.upenn.edu">PRECISE Center</a>, School of Engineering and Applied Science, <a href="http://www.upenn.edu">University of Pennsylvania</a>, where I work with Professors <a href="http://www.cis.upenn.edu/~lee/home/home/index.shtml">Insup Lee</a> and <a href="http://www.cis.upenn.edu/~sokolsky/home.html">Oleg Sokolsky</a>. I am also an Associate Professor at <a href="http://tca.iscas.ac.cn">TCA Lab</a>, Institute of Software, Chinese Academy of Sciences (ISCAS).</p>
-<p>I received my Ph.D in Computer Science from <a href="www.ustc.edu.cn/">University of Science and Technology of China</a> in 2009 under the supervision of Prof.<a href="http://www.isec.ac.cn/tutorDetail.aspx?id=1&amp;tutortype=%B2%A9%CA%BF%C9%FA%B5%BC%CA%A6">Dengguo Feng</a> and B.E. degree in Communication Engineering in 2003 from the same university.</p>
-<p>My research interests focus on the security analysis and assessment of IT systemsin and medical cyber-physical systems, especially security issues in access control mechanisms and code implementations of these systems.</p>
-<hr />
-<!--Jekyll ref: Andre Costa; Hardik Pandya; Jonathan McGlone; ZDroid; Shuyang Lin; Mark Reid;-->
+                <h1>
+410 Error
+</h1>
 
-<div style="text-align:center">
-<p>Rm 223 Towne Building<br /><a href="http://cis.upenn.edu">Department of Computer &amp; Information Sciences</a><br /><a href="http://www.upenn.edu">University of Pennsylvania</a><br />Philadelphia, PA 19104<br />longines.cheng AT gmail.com<br /></p>
-<p><a href="http://github.com/cgnail">Github</a> | <a href="http://facebook.com/liang.cheng.355">Facebook</a> | <a href="https://www.flickr.com/photos/leoncheng/">Photos</a></p>
-<hr />
+</b>
+</p>
+
+<p>
+This page was but is no more, and so cannot be found: the same thing is for browsing and for being.
+</p>
+
+<p>
+Return now to <a href="./">the way of truth</a>, or continue on the path which mortals, knowing nothing, two-headed, wander:
+</p>
+<div class="sitesearch">
+<pre><code>&lt;form method=&quot;get&quot; action=&quot;http://www.google.com/search&quot;&gt;</code></pre>
+<p>
+    
+<input type="search" name="q" size="50" maxlength="255" value placeholder="Search davidsanson.com with google" /> <input type="submit" value="Go" /> <input type="hidden" name="sitesearch" value="davidsanson.com" />
+</p>
+  </form>
 </div>
             </div>
         </div>
