--- a/index.html
+++ b/index.html
@@ -1,73 +1,22 @@
-<!DOCTYPE html>
-<html lang="en">
-    <head>
-        <meta charset="utf-8" />
-        <meta name="author" content="Liang Cheng" />
-        <title>Liang Cheng</title>
-        <link rel="stylesheet" type="text/css" href="./css/default.css" />
-        <link rel="shortcut icon" href="./favicon.ico" />
-        <link rel="apple-touch-icon" href="./images/touch.png" />
-   		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <!--Make Internet Explorer recognize HTML5 tags-->
-        <!--[if lt IE 9]>
-        <script src="http://html5shiv.googlecode.com/svn/trunk/html5.js"></script>
-        <![endif]-->
-        
-
-        
-    </head>
-    <body>
-        <div id="content">
-            <header>
-                <h1 id="logo">
-                    <a href="./" rel="home" title"My Site" accesskey="1">Liang Cheng</a>
-                </h1>
-                <nav> 
-                    <ul>
-                        <li class="cv">
-                           <a href="./cv.html">CV</a>
-                       </li>
-                       <li class="research">
-                            <a href="./research/">Research</a>
-                        </li>
-                        <li class="publication">
-                            <a href="./publication.html">Publications</a>
-                        </li>
-                        <li class="vulnerability">
-                            <a href="./vulnerability.html">Vulnerabilities</a>
-                        </li>
-                    <!--    <li class="teaching">
-                            <a href="/teaching.html">Teaching</a>
-                        </li>
--->
-                    </ul>
-                </nav>
-            </header>
-            <hr>
-            <div id="page">
-                <div class="home_image_container">
-<div class="home_image">
-<img src="images/liang.jpg" alt="A picture of me" width="220" height="226">
+---
+layout: default
+title: Liang Cheng's personal website
+cv: passive
+notes: passive
+contact: passive
+description: Liang Cheng is now a visiting scholar at UPenn.
+---
+<!-- <div class="jumbotron"> -->
+<div class="row marketing">
+	<div class="col-sm-4">
+	<img  class="img-circle avatar" alt="Liang Cheng" src="img/liang.jpg" width="200px" >
+	</div>
+	<div itemscope itemtype="http://data-vocabulary.org/Person" class="col-sm-8">
+	<p class="lead">Hi, I'm <span itemprop="name">Liang Cheng</span> and I am a visiting scholar at the <a href="http://precise.seas.upenn.edu">PRECISE Center</a>, <a href="http://www.upenn.edu">University of Pennsylvania</a>.</p>
+	
+	<p> I have been working with Professors <a href="http://www.cis.upenn.edu/~lee/home/home/index.shtml">Insup Lee</a> and <a href="http://www.cis.upenn.edu/~sokolsky/home.html">Oleg Sokolsky</a> of PRECISE center since Jan 2014. I am also an Associate Professor at <a href="http://tca.iscas.ac.cn">TCA Lab</a>, Institute of Software, Chinese Academy of Sciences (ISCAS). Before I had a position in ISCAS, I received my Ph.D in Computer Science from <a href="http://www.ustc.edu.cn/">University of Science and Technology of China</a> in 2009 under the supervision of Prof.<a href="http://www.isec.ac.cn/tutorDetail.aspx?id=1&tutortype=%B2%A9%CA%BF%C9%FA%B5%BC%CA%A6">Dengguo Feng</a> and B.E. degree in Communication Engineering in 2003 from the same university.</p>
+	
+	<p>My research interests focus on the security analysis and assessment of IT systemsin and medical cyber-physical systems, especially security issues in access control mechanisms and code implementations of these systems. <a href="contact">Drop me a line</a> if you're interested in working with me.</p>
+	</div>
 </div>
-</div>
-<hr />
-<p>I am a visiting scholar at the <a href="http://precise.seas.upenn.edu">PRECISE Center</a>, School of Engineering and Applied Science, <a href="http://www.upenn.edu">University of Pennsylvania</a>, where I work with Professors <a href="http://www.cis.upenn.edu/~lee/home/home/index.shtml">Insup Lee</a> and <a href="http://www.cis.upenn.edu/~sokolsky/home.html">Oleg Sokolsky</a>. I am also an Associate Professor at <a href="http://tca.iscas.ac.cn">TCA Lab</a>, Institute of Software, Chinese Academy of Sciences (ISCAS).</p>
-<p>I received my Ph.D in Computer Science from <a href="www.ustc.edu.cn/">University of Science and Technology of China</a> in 2009 under the supervision of Prof.<a href="http://www.isec.ac.cn/tutorDetail.aspx?id=1&amp;tutortype=%B2%A9%CA%BF%C9%FA%B5%BC%CA%A6">Dengguo Feng</a> and B.E. degree in Communication Engineering in 2003 from the same university.</p>
-<p>My research interests focus on the security analysis and assessment of IT systemsin and medical cyber-physical systems, especially security issues in access control mechanisms and code implementations of these systems.</p>
-<hr />
-<!--Jekyll ref: Andre Costa; Hardik Pandya; Jonathan McGlone; ZDroid; Shuyang Lin; Mark Reid;-->
-
-<div style="text-align:center">
-<p>Rm 223 Towne Building<br /><a href="http://cis.upenn.edu">Department of Computer &amp; Information Sciences</a><br /><a href="http://www.upenn.edu">University of Pennsylvania</a><br />Philadelphia, PA 19104<br />longines.cheng AT gmail.com<br /></p>
-<p><a href="http://github.com/cgnail">Github</a> | <a href="http://facebook.com/liang.cheng.355">Facebook</a> | <a href="https://www.flickr.com/photos/leoncheng/">Photos</a></p>
-<hr />
-</div>
-            </div>
-        </div>
-        <footer>
-           <p>
-               <a href="./site.html" title="License">design and most content: [(CC) BY NC SA]</a>
-           </p>
-        </footer>
-    </body>
-</html>
+<!-- </div> -->
